# dz_pure_python

./: pyproject.toml
lessons/dz6/: history.txt  main.py  tools.py
