[tool.poetry]
name = "pure-python-dz"
version = "0.1.0"
description = ""
authors = ["alexander.mescheryakov <alexander.mescheryakov@semrush.com>"]
readme = "README.md"
packages = [{include = "pure_python_dz"}]

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
